Add checkout and commit command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pathlib",
     "PyYAML",
     "networkx[default]",
+    "sqlparse"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
